finishes arches, contact, index, pages

--- a/blog.html
+++ b/blog.html
@@ -86,10 +86,27 @@
         </div>
         <div class="row ">
             <div class="col-12 ">
-                <div class="marquee">
-                    <div class="icon-ticker">
-                        <img src="img/iconscoll.png" alt="">
-                        <img src="img/iconscoll.png" alt="">
+                <div class="scrolling-gallery-container">
+                    <div class="scrolling-marquee">
+                        <img src="img/logo-glassdoor.png" alt="" class="initiate-marquee">
+                        <img src="img/logo-jason-momoa.png" alt="">
+                        <img src="img/logo-playboy.png" alt="">
+                        <img src="img/logo-jennifer-garner.png" alt="">
+                        <img src="img/logo-google.png" alt="">
+                        <img src="img/logo-nrdc.png" alt="">
+                        <img src="img/logo-bruce-willis.png" alt="">
+                        <img src="img/logo-nomad-cruise.png" alt="">
+                        <img src="img/logo-coworking-bansko.png" alt="">
+                        <img src="img/logo-ben-affleck.png" alt="">
+                        <img src="img/logo-nomad-safari.png" alt="">
+                        <img src="img/logo-nomadbase.png" alt="">
+                        <img src="img/logo-glassdoor.png" alt="" >
+                        <img src="img/logo-jason-momoa.png" alt="">
+                        <img src="img/logo-playboy.png" alt="">
+                        <img src="img/logo-jennifer-garner.png" alt="">
+                        <img src="img/logo-google.png" alt="">
+                        <img src="img/logo-nrdc.png" alt="">
+                        <img src="img/logo-bruce-willis.png" alt="">
                     </div>
                 </div>
             </div>
@@ -103,16 +120,16 @@
 
                         <form>
                             <div class="form-group row">
-                                <label for="firstName" class="col-form-label sr-only">Name</label>
+                                <label for="firstNameSubscribe" class="col-form-label sr-only">Name</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control yellow" id="firstName" name="firstName"
+                                    <input type="text" class="form-control yellow" id="firstNameSubscribe" name="firstNameSubscribe"
                                         placeholder="Name" />
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label for="email" class="col-form-label sr-only">Email</label>
+                                <label for="emailSubscribe" class="col-form-label sr-only">Email</label>
                                 <div class="col-md-10">
-                                    <input type="email" class="form-control yellow" id="lastName" name="lastName"
+                                    <input type="email" class="form-control yellow" id="emailSubscribe" name="emailSubscribe"
                                         placeholder="Email" />
                                 </div>
                             </div>
@@ -254,8 +271,8 @@
                 
                 <div class="col-6 p-4 text-center">
                     <a role="button" class="btn btn-link mb-4" href="mailto:kevinsballoons@gmail.com">
-                        <i class="fa fa-envelope-o"></i>
-                        kevinsballoons@gmail.com
+                        <i class="fa fa-envelope-o"></i><br>
+                        <span class="footer-email"> kevinsballoons@gmail.com</span>
                     </a>
                     <h5>Social</h5>
                     <a class="btn btn-social-icon btn-lg btn-instagram" href="http://instagram.com/kevins.balloons">
