--- a/scraps.html
+++ b/scraps.html
@@ -1,26 +1,22 @@
-<button class="navbar-toggler mr-3" type="button" data-toggle="collapse" data-target="#nucampNavbar">
-    <span class="navbar-toggler-icon "></span>
-</button>
-
-<div class="collapse navbar-collapse" id="nucampNavbar">
-    <ul class="navbar-nav container justify-content-space-around ">
-        <li class="nav-item active">
-            <a class="nav-link" href="#">
-                Services
-            </a>
-        </li>
-        <li class="nav-item active">
-            <a class="nav-link" href="aboutus.html">
-                Book Now
-            </a>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link " href="contactus.html">
-                <i class="fa fa-phone fa-lg"></i>
-                
-            </a>
-        </li>
-    </ul>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+<div>
+    <p id="clientList"></p>
 </div>
+
+
+
+
+
+    <script src="js/scripts.js"></script>
+</body>
+
+</html>
